# Grade_predict

./: README.md  gpa.csv  grade_predictor.pkl  main.py  pyproject.toml  requirements.txt  stream.py
