[tool.poetry]
name = "grade_predictor"
version = "0.1.0"
description = "A machine learning project to predict student grades"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
streamlit = "^1.4.0"
streamlit-option-menu = "^0.1.0"
altair = "^4.1.0"
scikit-learn = "^0.24.0"
joblib = "^1.0.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
